--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "tinyapp",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "express_server.js",
   "scripts": {
+    "start": "./node_modules/.bin/nodemon -L express_server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -11,7 +12,7 @@
     "url": "git+https://github.com/ban-mazin/tinyapp.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Ban ban.qaddoori89@gmail.com",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/ban-mazin/tinyapp/issues"
@@ -20,6 +21,10 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "ejs": "^3.1.6",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "method-override": "^3.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
